# PythonProject1

./: .env.example  .gitignore  AI_PARAMETERS_FIX.md  AI_自动化视频生成技术路线规划书.md  CLAUDE.md  DELIVERY_CONFIRMATION.md  DEPLOY.md  Dockerfile  FIX_LIST.md  INTEGRATION_SUMMARY.md  LICENSE  PARAMETER_FIX_QUICK_START.md  POC_INTEGRATION_PLAN.md  README.md  REFACTOR_FLOURISH_V2.md  REFACTOR_PLAN.md  REMOTE_DEPLOY_CHECKLIST.md  ROADMAP.md  TEST_REPORT.md  TEST_RESULTS.txt  TEST_SESSION_MANAGEMENT.md  USAGE_GUIDE.md  add_upload_methods.py  commit_msg_ux.txt  dashboard.py  demo_e2e.py  demo_v2.py  fix_validation.py  loan_animation_pro.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scheduler.py  start.py
.github/: copilot-instructions.md
.github/chatmodes/: video-debug.chatmode.md  video-planning.chatmode.md  video-rendering.chatmode.md
.github/workflows/: ci.yml  python-ci.yml
api/: __init__.py  main.py  v2_routes.py
app/api/: __init__.py  main.py  v2_routes.py
app/core/: v2_renderer.py
app/orchestrator/: agent_cli.py  registry.py  runner.py  scaffold.py
app/scripts/: __init__.py  dashboard.py  scheduler.py
cli/: __init__.py  video.py
config/: README.md
core/: v2_renderer.py
core/animation/: __init__.py
core/brand/: style.py
core/camera/: __init__.py  controller.py
core/insight/: insight_generator.py
core/render/: __init__.py  renderer.py
core/templates/: bar_chart.py  base.py
demos/: README.md  demo_api.py
docker/: Dockerfile  docker-compose.yml
docs/: AGENT.md  CORE_VIDEO_PIPELINE.md  DATA_VIZ_VIDEO_ARCHITECTURE.md  GLOBAL_SETTINGS_MIGRATION.md  LEARNING_GUIDE.md  POC_INTEGRATION_COMPLETE.md  PRODUCT_ROADMAP.md  PRODUCT_STRATEGY.md  SETTINGS_UI_RESTORE_PLAN.md  STUDIO_ARCHITECTURE.md  UAT_BROWSER_AND_AGENT.md  fullstack-project-plan.md  业务落地说明.md  技术预研报告.md  阶段2-4实现报告.md
docs/archive/: API_KEY_TOGGLE_FEATURE.md  CLEANUP_REPORT.md  DEEPSEEK_SUPPORT.md  FORCE_REFRESH.md  SETTINGS_INTEGRATION_GUIDE.md
docs/reports/: SETTINGS_FINAL_TEST.md  UAT_RESULT.md  UX_OPTIMIZATION_REPORT.md  VALIDATION_REPORT.md
examples/: add_upload_methods.py  demo_api.py  demo_integration.py  e2e_demo_config.json  fix_validation.py  validation_script.py
orchestrator/: __init__.py  agent_cli.py  inspector.py  registry.py  scaffold.py
poc/: demo_stages.py  deploy.py  full_workflow_camera.json  main.py  requirements.txt
poc/examples/: camera_demo.py  stage2_showcase.py
poc/src/: __init__.py
poc/tests/: test_poc.py
projects/fund_fee_erosion/: entrypoints.py  project_manifest.py
projects/loan_comparison/: README.md  entrypoints.py  project_manifest.py
projects/my_tutor/: entrypoints.py  project_manifest.py
projects/panel_tutor/: entrypoints.py  project_manifest.py
projects/v2_templates/: README.md  __init__.py  entrypoints.py  project_manifest.py
projects/video_platform_introduction/: entrypoints.py  project_manifest.py
scripts/: Dockerfile  FIX_DASHBOARD.md  README.md  dashboard.py  pyproject.toml  requirements-console.txt  run_dashboard.bat  run_dashboard.py  run_dashboard.sh  scheduler.py
shared/agent/: __init__.py  compiler.py  schemas.py  service.py  validate.py
shared/assets/: registry.py
shared/code_studio/: __init__.py  compiler.py  schemas.py  service.py
shared/config/: settings.py
shared/content/: __init__.py  ai_planner.py  planner.py  render_mapping.py  render_timeline.py  renderer_tokens.py  rhythm.py  schemas.py  screenplay_subtitles.py  screenplay_validate.py  templates.py  themes.py  typography.py
shared/core/: exceptions.py  quality_gate.py  self_correction.py  task_manager.py
shared/media/: video_editor.py
shared/platform/: presets.py  video_request.py
shared/studio/: __init__.py  config.py  job_result.py
shared/utils/: decorators.py  time.py  validators.py
shared/visualization/: __init__.py  png_frame_cache.py  registry.py  render_cache.py  runtime.py
src/PythonProject1/: __init__.py  entrypoints.py  loan_animation_pro.py  main.py  project_manifest.py
static/: ai_compile.html  code_studio.html  index.html  index_new.html  index_old.html  projects.html  v2.html
static/css/: dashboard.css
static/js/: dashboard-app.js
tests/: SETTINGS_INTEGRATION_TEST.md  UI_AUTOMATION_REPORT.md  UI_FIX_REPORT.md  conftest.py  test_agent_layer.py  test_api.py  test_content_planner.py  test_full_pipeline_integration.py  test_loan.py  test_main.py  test_manim_backend.py  test_png_frame_cache.py  test_poc_integration.py  test_quality_conformance.py  test_render_cache.py  test_render_manifest.py  test_render_mapping.py  test_render_timeline.py  test_renderer_expression.py  test_renderer_tokens.py  test_scaffold.py  test_screenplay_store.py  test_screenplay_validate.py  test_self_correction.py  test_studio_db.py  test_theme_registry.py  test_typography.py  test_v23.py  test_video_pipeline.py  test_video_pipeline_e2e_render.py  test_visualization_contract.py
tools/: check_vue_template.py
web/: README.md  ai_compile.html  code_studio.html  index.html  index_old.html  projects.html  sample_screenplay.json  settings-modal.html  v2.html
workspace/: config.ini
(+210 files in other folders)
