[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PythonProject1"
version = "1.0.0"
description = "Free Ride 自动化 Python 项目演示"
authors = [{name = "Developer", email = "dev@example.com"}]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["PythonProject1*"]