[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PythonProject1"
version = "1.0.0"
description = "贷款还款方式对比动画 - Free Ride 自动化演示项目"
authors = [{name = "Developer", email = "dev@example.com"}]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "ffmpeg-python>=0.2.0"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["PythonProject1*"]